--- a/src/App.css
+++ b/src/App.css
@@ -33,10 +33,15 @@
   margin-top: 50px;
 }
 
+.jam {
+  z-index: 3;
+}
+
 h1,
 h2,
 h3 {
   pointer-events: none;
+  z-index: 3;
 }
 
 .random {
@@ -87,8 +92,7 @@ h3 {
   list-style: none;
   width: 25px;
   height: 25px;
-  background: rgba(163, 31, 97, 0.2);
-  animation: animate 10s linear infinite;
+  animation: animate 18s linear infinite;
   bottom: -150px;
 }
 
@@ -137,10 +141,10 @@ h3 {
 @keyframes animate {
   0% {
     transform: translateY(0) rotate(0deg);
-    opacity: 1;
+    opacity: 0.9;
   }
   100% {
-    transform: translateY(-800px) rotate(360deg);
+    transform: translateY(-1500px) rotate(360deg);
     opacity: 0;
   }
 }
